# Video-blueprint-thumbnail

./: README.md  file_thumbnail.py  pyproject.toml  run.bat  start.bat
