[tool.poetry]
name = "thum_file"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
opencv-python = "^4.6.0"
colorama = "^0.4.5"
Jinja2 = "^3.1.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
